Report print jobs that are cancelled by CUPS as errors.

If a print job encounters a problem, it can sometimes be cancelled by
CUPS or the printer.  We will now notify the user of an error in this
situation.  If a user cancels a print job, the behavior remains the same.

BUG=682853,684853

Review-Url: https://codereview.chromium.org/2708233006
Cr-Commit-Position: refs/heads/master@{#453025}

Former-commit-id: b5d49127cc30716341b904fd9cfc6e26e68b6d5d